--- a/isrg.toml
+++ b/isrg.toml
@@ -392,6 +392,16 @@ who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-run"
 version = "0.1.1"
 
+[[audits.nalgebra]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-run"
+delta = "0.29.0 -> 0.32.6"
+
+[[audits.nalgebra-macros]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-run"
+delta = "0.1.0 -> 0.2.2"
+
 [[audits.num-bigint]]
 who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-deploy"
@@ -593,6 +603,16 @@ who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-deploy"
 delta = "1.0.162 -> 1.0.163"
 
+[[audits.serde]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.203 -> 1.0.204"
+
+[[audits.serde]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.204 -> 1.0.207"
+
 [[audits.serde_derive]]
 who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-deploy"
@@ -622,6 +642,16 @@ delta = "1.0.160 -> 1.0.162"
 who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-deploy"
 delta = "1.0.162 -> 1.0.163"
+
+[[audits.serde_derive]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.203 -> 1.0.204"
+
+[[audits.serde_derive]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.204 -> 1.0.207"
 
 [[audits.serde_json]]
 who = "Tim Geoghegan <timg@letsencrypt.org>"
@@ -664,6 +694,11 @@ who = "Brandon Pitman <bran@bran.land>"
 criteria = "safe-to-deploy"
 delta = "0.10.7 -> 0.10.8"
 
+[[audits.simba]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-run"
+delta = "0.6.0 -> 0.8.1"
+
 [[audits.statest]]
 who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-run"
@@ -674,10 +709,20 @@ who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-run"
 delta = "0.16.0 -> 0.16.1"
 
+[[audits.statrs]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-run"
+delta = "0.16.1 -> 0.17.1"
+
 [[audits.subtle]]
 who = "David Cook <dcook@divviup.org>"
 criteria = "safe-to-deploy"
 delta = "2.4.1 -> 2.5.0"
+
+[[audits.subtle]]
+who = "David Cook <dcook@divviup.org>"
+criteria = "safe-to-deploy"
+delta = "2.5.0 -> 2.6.1"
 
 [[audits.syn]]
 who = "Brandon Pitman <bran@bran.land>"
@@ -890,7 +935,7 @@ end = "2024-06-08"
 criteria = "safe-to-deploy"
 user-id = 3618
 start = "2019-02-28"
-end = "2024-06-08"
+end = "2025-07-01"
 
 [[trusted.syn]]
 criteria = "safe-to-deploy"
