--- a/audits/bytecode-alliance.toml
+++ b/audits/bytecode-alliance.toml
@@ -158,6 +158,14 @@ start = "2020-01-14"
 end = "2025-07-30"
 notes = "I am an author of this crate"
 
+[[wildcard-audits.pulley-interpreter]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+user-id = 73222
+start = "2024-09-20"
+end = "2025-09-25"
+notes = "The Bytecode Alliance is the author of this crate."
+
 [[wildcard-audits.regalloc2]]
 who = "Chris Fallin <chris@cfallin.org>"
 criteria = "safe-to-deploy"
@@ -755,11 +763,23 @@ who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 delta = "0.21.0 -> 0.22.0"
 
+[[audits.addr2line]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.22.0 -> 0.24.1"
+notes = "Lots of internal code refactorings and code movement. Nothing out of place however."
+
 [[audits.adler]]
 who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 version = "1.0.2"
 notes = "This is a small crate which forbids unsafe code and is a straightforward implementation of the adler hashing algorithm."
+
+[[audits.adler2]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+version = "2.0.0"
+notes = "Fork of the original `adler` crate, zero unsfae code, works in `no_std`, does what it says on th tin."
 
 [[audits.ahash]]
 who = "Chris Fallin <chris@cfallin.org>"
@@ -917,6 +937,16 @@ criteria = "safe-to-deploy"
 delta = "1.0.5 -> 1.0.14"
 notes = "The Bytecode Alliance is the author of this crate."
 
+[[audits.cap-fs-ext]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
+
+[[audits.cap-net-ext]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
+
 [[audits.cap-primitives]]
 who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
@@ -940,6 +970,11 @@ who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
 delta = "1.0.5 -> 1.0.14"
 notes = "The Bytecode Alliance is the author of this crate."
+
+[[audits.cap-primitives]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
 
 [[audits.cap-rand]]
 who = "Alex Crichton <alex@alexcrichton.com>"
@@ -959,6 +994,11 @@ criteria = "safe-to-deploy"
 delta = "1.0.1 -> 1.0.14"
 notes = "The Bytecode Alliance is the author of this crate."
 
+[[audits.cap-rand]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
+
 [[audits.cap-std]]
 who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
@@ -982,6 +1022,11 @@ who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
 delta = "1.0.5 -> 1.0.14"
 notes = "The Bytecode Alliance is the author of this crate."
+
+[[audits.cap-std]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
 
 [[audits.cap-tempfile]]
 who = "Dan Gohman <dev@sunfishcode.online>"
@@ -1024,6 +1069,11 @@ who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
 delta = "1.0.5 -> 1.0.14"
 notes = "The Bytecode Alliance is the author of this crate."
+
+[[audits.cap-time-ext]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
 
 [[audits.cargo-platform]]
 who = "Pat Hickey <phickey@fastly.com>"
@@ -1105,6 +1155,12 @@ criteria = "safe-to-deploy"
 version = "0.7.1"
 notes = "This library has many uses of unsafe, but contains extensive fuzzing and miri testing."
 
+[[audits.console]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.15.0 -> 0.15.8"
+notes = "Lots of internal refactorings for new features and such, nothing major out of place."
+
 [[audits.constant_time_eq]]
 who = "Nick Fitzgerald <fitzgen@gmail.com>"
 criteria = "safe-to-deploy"
@@ -1164,6 +1220,18 @@ who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 delta = "0.9.9 -> 0.9.15"
 notes = "In general crossbeam has quite a lot of unsafe code as it's a primitive tool for\nconcurrency but this update isn't adding any extra unsafe than there already\nwas and all the updates here are related to odds-and-ends maintenance. In\nother words everything is as one would expect from a minor update for this\ncrate.\n"
+
+[[audits.crossbeam-epoch]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.9.15 -> 0.9.18"
+notes = "Nontrivial update but mostly around dependencies and how `unsafe` code is managed. Everything looks the same shape as before."
+
+[[audits.crossbeam-utils]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.8.10 -> 0.8.11"
+notes = "No changes of substance, only minor updates around how `unsafe` code is managed but it's all trivially the same as before"
 
 [[audits.crypto-common]]
 who = "Benjamin Bouvier <public@benj.me>"
@@ -1386,6 +1454,12 @@ notes = "Still looks like a good DWARF-parsing crate, nothing major was added or
 who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 delta = "0.28.0 -> 0.29.0"
+
+[[audits.gimli]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.29.0 -> 0.31.0"
+notes = "Various updates here and there, nothing too major, what you'd expect from a DWARF parsing crate."
 
 [[audits.glob]]
 who = "Jamey Sharp <jsharp@fastly.com>"
@@ -1648,6 +1722,12 @@ criteria = "safe-to-deploy"
 delta = "0.2.151 -> 0.2.153"
 notes = "More bindings for more platforms. I have not verified that everything is exactly as-is on the platform as specified but nothing major is otherwise introduced as part of this bump."
 
+[[audits.libc]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.2.153 -> 0.2.158"
+notes = "More platforms, more definitions, more headers, it's still just `libc`"
+
 [[audits.libfuzzer-sys]]
 who = "Nick Fitzgerald <fitzgen@gmail.com>"
 criteria = "safe-to-run"
@@ -1694,6 +1774,12 @@ who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
 version = "0.3.3"
 notes = "I am the author of this crate."
+
+[[audits.log]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.4.20 -> 0.4.22"
+notes = "Mostly updates around the key-value implementation of this crate, but nothing out of place."
 
 [[audits.mach2]]
 who = "Nick Fitzgerald <fitzgen@gmail.com>"
@@ -1759,6 +1845,12 @@ who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-run"
 delta = "0.5.1 -> 0.5.3"
 notes = "This looks to be a minor update to the crate to remove some `unsafe` code,\nupdate Rust stylistic conventions, and perhaps some clippy lints. No major\nchanges.\n"
+
+[[audits.miniz_oxide]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.7.1 -> 0.8.0"
+notes = "Minor updates, using new Rust features like `const`, no major changes."
 
 [[audits.mio]]
 who = "Alex Crichton <alex@alexcrichton.com>"
@@ -2068,6 +2160,12 @@ who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 delta = "0.1.21 -> 0.1.24"
 
+[[audits.rustc-hash]]
+who = "Trevor Elliott <telliott@fastly.com>"
+criteria = "safe-to-deploy"
+delta = "1.1.0 -> 2.0.0"
+notes = "Chris Fallin reviewed this update with me, and we didn't find anything surprising. We did verify that the new constants did originate in the paper referenced."
+
 [[audits.rustix]]
 who = "Dan Gohman <dev@sunfishcode.online>"
 criteria = "safe-to-deploy"
@@ -2091,6 +2189,11 @@ who = "Pat Hickey <phickey@fastly.com>"
 criteria = "safe-to-deploy"
 delta = "0.36.7 -> 0.36.8"
 notes = "The Bytecode Alliance is the author of this crate."
+
+[[audits.rustix]]
+who = "Dan Gohman <dev@sunfishcode.online>"
+criteria = "safe-to-deploy"
+delta = "0.38.34 -> 0.38.37"
 
 [[audits.rustls]]
 who = "Pat Hickey <phickey@fastly.com>"
@@ -2252,10 +2355,28 @@ criteria = "safe-to-deploy"
 delta = "0.1.17 -> 0.2.6"
 notes = "Minor updates around using some utilities from the standard library, nothing major."
 
+[[audits.terminal_size]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.2.6 -> 0.3.0"
+notes = "Minor updates here, nothing major."
+
 [[audits.test-log]]
 who = "Pat Hickey <phickey@fastly.com>"
 criteria = "safe-to-deploy"
 version = "0.2.11"
+
+[[audits.test-log]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-run"
+delta = "0.2.11 -> 0.2.16"
+notes = "Crate implementation was moved to a `*-macros` crate, crate is very small as a result."
+
+[[audits.test-log-macros]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-run"
+version = "0.2.16"
+notes = "Simple procedural macro copied from its previous source."
 
 [[audits.thread_local]]
 who = "Pat Hickey <phickey@fastly.com>"
@@ -3138,13 +3259,13 @@ end = "2024-07-15"
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2023-03-16"
-end = "2024-07-14"
+end = "2025-09-20"
 
 [[trusted.anstyle]]
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2022-05-18"
-end = "2024-07-14"
+end = "2025-09-20"
 
 [[trusted.anstyle-parse]]
 criteria = "safe-to-deploy"
@@ -3162,7 +3283,7 @@ end = "2024-07-14"
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2023-03-08"
-end = "2024-07-14"
+end = "2025-09-20"
 
 [[trusted.anyhow]]
 criteria = "safe-to-deploy"
@@ -3181,6 +3302,12 @@ criteria = "safe-to-deploy"
 user-id = 2915
 start = "2023-06-29"
 end = "2024-07-14"
+
+[[trusted.backtrace]]
+criteria = "safe-to-deploy"
+user-id = 539
+start = "2024-03-21"
+end = "2025-09-20"
 
 [[trusted.bstr]]
 criteria = "safe-to-deploy"
@@ -3246,25 +3373,31 @@ end = "2024-07-14"
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2021-12-08"
-end = "2024-07-06"
+end = "2025-09-20"
 
 [[trusted.clap_builder]]
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2023-03-28"
-end = "2024-07-14"
+end = "2025-09-20"
+
+[[trusted.clap_complete]]
+criteria = "safe-to-deploy"
+user-id = 6743
+start = "2021-12-31"
+end = "2025-09-25"
 
 [[trusted.clap_derive]]
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2021-12-08"
-end = "2024-07-06"
+end = "2025-09-20"
 
 [[trusted.clap_lex]]
 criteria = "safe-to-deploy"
 user-id = 6743
 start = "2022-04-15"
-end = "2024-07-06"
+end = "2025-09-20"
 
 [[trusted.cpp_demangle]]
 criteria = "safe-to-deploy"
@@ -3283,6 +3416,18 @@ criteria = "safe-to-deploy"
 user-id = 1
 start = "2020-05-19"
 end = "2025-02-23"
+
+[[trusted.env_filter]]
+criteria = "safe-to-deploy"
+user-id = 6743
+start = "2024-01-19"
+end = "2025-09-20"
+
+[[trusted.env_logger]]
+criteria = "safe-to-deploy"
+user-id = 6743
+start = "2022-11-24"
+end = "2025-09-20"
 
 [[trusted.equivalent]]
 criteria = "safe-to-deploy"
@@ -3355,6 +3500,12 @@ criteria = "safe-to-deploy"
 user-id = 6825
 start = "2022-01-22"
 end = "2024-07-14"
+
+[[trusted.is_terminal_polyfill]]
+criteria = "safe-to-deploy"
+user-id = 6743
+start = "2024-05-02"
+end = "2025-09-20"
 
 [[trusted.itoa]]
 criteria = "safe-to-deploy"
@@ -3636,55 +3787,61 @@ end = "2025-08-07"
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-11-15"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows-targets]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2022-09-09"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_aarch64_gnullvm]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2022-09-01"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_aarch64_msvc]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-11-05"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_i686_gnu]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-10-28"
-end = "2024-06-17"
+end = "2025-09-20"
+
+[[trusted.windows_i686_gnullvm]]
+criteria = "safe-to-deploy"
+user-id = 64539
+start = "2024-04-02"
+end = "2025-09-20"
 
 [[trusted.windows_i686_msvc]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-10-27"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_x86_64_gnu]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-10-28"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_x86_64_gnullvm]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2022-09-01"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.windows_x86_64_msvc]]
 criteria = "safe-to-deploy"
 user-id = 64539
 start = "2021-10-27"
-end = "2024-06-17"
+end = "2025-09-20"
 
 [[trusted.winnow]]
 criteria = "safe-to-deploy"
