--- a/audits/isrg.toml
+++ b/audits/isrg.toml
@@ -744,6 +744,11 @@ who = "Brandon Pitman <bran@bran.land>"
 criteria = "safe-to-deploy"
 delta = "1.0.40 -> 1.0.43"
 
+[[audits.thiserror]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.63 -> 1.0.64"
+
 [[audits.thiserror-impl]]
 who = "Brandon Pitman <bran@bran.land>"
 criteria = "safe-to-deploy"
@@ -758,6 +763,11 @@ delta = "1.0.39 -> 1.0.40"
 who = "Brandon Pitman <bran@bran.land>"
 criteria = "safe-to-deploy"
 delta = "1.0.40 -> 1.0.43"
+
+[[audits.thiserror-impl]]
+who = "Brandon Pitman <bran@bran.land>"
+criteria = "safe-to-deploy"
+delta = "1.0.63 -> 1.0.64"
 
 [[audits.unicode-ident]]
 who = "David Cook <dcook@divviup.org>"
