--- a/audits/zcash.toml
+++ b/audits/zcash.toml
@@ -2516,6 +2516,13 @@ delta = "0.5.0 -> 0.5.1"
 aggregated-from = "https://raw.githubusercontent.com/zcash/zcash/master/qa/supply-chain/audits.toml"
 
 [[audits.redjubjub]]
+who = "Kris Nuttycombe <kris@nutty.land>"
+criteria = "safe-to-deploy"
+delta = "0.7.0 -> 0.8.0"
+notes = "This release adds `no-std` compatibility."
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[audits.redjubjub]]
 who = "Daira Emma Hopwood <daira@jacaranda.org>"
 criteria = [ "safe-to-deploy", "crypto-reviewed",]
 version = "0.7.0"
@@ -3962,6 +3969,13 @@ aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/sup
 
 [[trusted.equihash]]
 criteria = "safe-to-deploy"
+user-id = 169181
+start = "2025-02-21"
+end = "2026-02-21"
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[trusted.equihash]]
+criteria = "safe-to-deploy"
 user-id = 6289
 start = "2020-06-26"
 end = "2024-09-21"
@@ -4168,6 +4182,13 @@ criteria = "safe-to-deploy"
 user-id = 169181
 start = "2024-12-17"
 end = "2025-12-17"
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[trusted.redjubjub]]
+criteria = "safe-to-deploy"
+user-id = 199950
+start = "2023-03-30"
+end = "2026-02-21"
 aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
 
 [[trusted.sapling-crypto]]
@@ -4466,6 +4487,13 @@ aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/sup
 
 [[trusted.zcash_encoding]]
 criteria = "safe-to-deploy"
+user-id = 169181
+start = "2024-08-19"
+end = "2026-02-21"
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[trusted.zcash_encoding]]
+criteria = "safe-to-deploy"
 user-id = 1244
 start = "2022-10-19"
 end = "2024-09-21"
@@ -4640,6 +4668,13 @@ end = "2025-04-16"
 aggregated-from = "https://raw.githubusercontent.com/zcash/zcash/master/qa/supply-chain/audits.toml"
 
 [[trusted.zcash_spec]]
+criteria = "safe-to-deploy"
+user-id = 199950
+start = "2025-02-20"
+end = "2026-02-21"
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[trusted.zcash_spec]]
 criteria = [ "safe-to-deploy", "crypto-reviewed", "license-reviewed",]
 user-id = 6289
 start = "2023-12-07"
@@ -4672,6 +4707,13 @@ criteria = "safe-to-deploy"
 user-id = 6289
 start = "2023-12-06"
 end = "2025-04-22"
+aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
+
+[[trusted.zip32]]
+criteria = "safe-to-deploy"
+user-id = 169181
+start = "2025-02-20"
+end = "2026-02-21"
 aggregated-from = "https://raw.githubusercontent.com/zcash/librustzcash/main/supply-chain/audits.toml"
 
 [[trusted.zip32]]
