--- a/audits/bytecode-alliance.toml
+++ b/audits/bytecode-alliance.toml
@@ -902,6 +902,12 @@ criteria = "safe-to-deploy"
 version = "0.2.14"
 notes = "Contains only unsafe code for what this crate's purpose is and only accesses\nthe environment's terminal information when asked. Does its stated purpose and\nno more.\n"
 
+[[audits.auditable-serde]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+version = "0.8.0"
+notes = "No `unsafe` code in this crate, small crate, only working with JSON and some serde data structures."
+
 [[audits.backtrace]]
 who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
@@ -1514,6 +1520,12 @@ criteria = "safe-to-deploy"
 delta = "1.0.26 -> 1.0.28"
 notes = "No new `unsafe` and no large changes in function. This diff is mostly refactoring with a lot of docs, CI, test changes. Adds some defensive clearing out of certain variables as a safeguard."
 
+[[audits.flate2]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "1.0.30 -> 1.1.0"
+notes = "Minor updates, mostly a new changelog with many lines. No new `unsafe` code and\nmostly just updating Rust idioms.\n"
+
 [[audits.foldhash]]
 who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
@@ -2014,6 +2026,12 @@ criteria = "safe-to-deploy"
 delta = "0.2.4 -> 0.2.7"
 notes = "This is a minor update which has some testing affordances as well as some\nupdated math algorithms.\n"
 
+[[audits.libm]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.2.8 -> 0.2.11"
+notes = "Mostly formatting-related changes, nothing major."
+
 [[audits.libtest-mimic]]
 who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-run"
@@ -2119,6 +2137,12 @@ who = "Alex Crichton <alex@alexcrichton.com>"
 criteria = "safe-to-deploy"
 delta = "0.8.0 -> 0.7.4"
 notes = "Very few changes here, only minor updates here and there."
+
+[[audits.miniz_oxide]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.8.0 -> 0.8.5"
+notes = "Lots of small updates here and there, for example around modernizing Rust\nidioms. No new `unsafe` code and everything looks like what you'd expect a\ncompression library to be doing.\n"
 
 [[audits.mio]]
 who = "Alex Crichton <alex@alexcrichton.com>"
@@ -2773,6 +2797,12 @@ who = "Pat Hickey <phickey@fastly.com>"
 criteria = "safe-to-deploy"
 version = "0.7.4"
 notes = "Alex Crichton audited the safety of src/sync/reusable_box.rs, I audited the remainder of the crate."
+
+[[audits.topological-sort]]
+who = "Alex Crichton <alex@alexcrichton.com>"
+criteria = "safe-to-deploy"
+delta = "0.1.0 -> 0.2.2"
+notes = "No major changes, mostly CI changes in this update. A new `Default` impl\nand a new test.\n"
 
 [[audits.torch-sys]]
 who = "Andrew Brown <andrew.brown@intel.com>"
